# computer-vision-controls

./: ControladorVolumenDedos.py  FaceTracking.py  HandTracking.py  MouseVirtual.py  README.md  pyproject.toml
