[project]
name = "computer-vision-controls"
version = "1.0"
description = "Proyecto personal de visión por computadora en Python que utiliza seguimiento de manos para controlar el mouse, ajustar el volumen del sistema y explorar la interacción humano-computadora mediante gestos, además de un archivo python para la detección facial, usando la cámara"
readme = "README.md"
requires-python = "==3.9.*"  # Forzar Python 3.9
dependencies = [
    "opencv-python>=4.12.0.88",
    "mediapipe==0.8.3.1",      # Versión antigua de MediaPipe
    "numpy>=2.0.0",
    "pyautogui>=0.9.54",
    "pycaw"
]